PYJJavaCC/src/CMMParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CMMParser.java */
import java.io.File;
import java.io.FileInputStream;
import java.util.*;

public class CMMParser/*@bgen(jjtree)*/implements CMMParserTreeConstants, CMMParserConstants {/*@bgen(jjtree)*/
  protected static JJTCMMParserState jjtree = new JJTCMMParserState();public static void main(String args []) throws ParseException
  {
    int i =0;
    while(i<1)
    {i++;
    try
      {
        File file = new File("E:\u005c\u005cJavaCC.txt");
                FileInputStream FileStream= new FileInputStream(file);
        System.out.println("Reading from standard input...");
                CMMParser parser = new CMMParser(FileStream);
                SimpleNode root = parser.Program();
                root.dump(">");
      }
      catch (Exception e)
      {
        System.out.println("\u951f\u65a4\u62f7\u951f\u65a4\u62f7.");
        System.out.println(e.getMessage());
        CMMParser.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
      }
      }



        }

//³ÌÐò
  static final public SimpleNode Program() throws ParseException {
                       /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(4)) {
        declar_stmt();
      } else {
        ;
      }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void declar_stmt() throws ParseException {
                    /*@bgen(jjtree) declar_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLAR_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type();
      variable();
      jj_consume_token(LP);
      para_stmt();
      jj_consume_token(RP);
      if (jj_2_2(4)) {
        co_function();
      } else if (jj_2_3(4)) {
        jj_consume_token(SEMICOLON);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void type() throws ParseException {
             /*@bgen(jjtree) type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(4)) {
        jj_consume_token(INT);
      } else if (jj_2_5(4)) {
        jj_consume_token(BOOL);
      } else if (jj_2_6(4)) {
        jj_consume_token(FLOAT);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void variable() throws ParseException {
                 /*@bgen(jjtree) variable */
  SimpleNode jjtn000 = new SimpleNode(JJTVARIABLE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(Sign);
      if (jj_2_7(4)) {
        arrayIndex();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void para_stmt() throws ParseException {
                  /*@bgen(jjtree) para_stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTPARA_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_8(4)) {
        stmt();
        stmt_closure();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void stmt() throws ParseException {
             /*@bgen(jjtree) stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type();
      variable();
      initialvalue();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void initialvalue() throws ParseException {
                     /*@bgen(jjtree) initialvalue */
  SimpleNode jjtn000 = new SimpleNode(JJTINITIALVALUE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_9(4)) {
        jj_consume_token(ASSIGN);
        rightVal();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void rightVal() throws ParseException {
                 /*@bgen(jjtree) rightVal */
  SimpleNode jjtn000 = new SimpleNode(JJTRIGHTVAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_10(4)) {
        arith_expression();
      } else if (jj_2_11(4)) {
        logical_expression();
      } else if (jj_2_12(4)) {
        jj_consume_token(LEFTBRACE);
        mantConstant();
        jj_consume_token(RIGHTBRACE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void logical_expression() throws ParseException {
                           /*@bgen(jjtree) logical_expression */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_EXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      logical_factor1();
      if (jj_2_13(4)) {
        jj_consume_token(LOGICOR);
        logical_expression();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void logical_factor1() throws ParseException {
                        /*@bgen(jjtree) logical_factor1 */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_FACTOR1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      logical_factor2();
      if (jj_2_14(4)) {
        jj_consume_token(LOGICAND);
        logical_factor1();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void logical_factor2() throws ParseException {
                        /*@bgen(jjtree) logical_factor2 */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_FACTOR2);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_15(4)) {
        jj_consume_token(TRUE);
      } else if (jj_2_16(4)) {
        jj_consume_token(FALSE);
      } else if (jj_2_17(4)) {
        arith_expression();
        logical_symbol();
        arith_expression();
      } else if (jj_2_18(4)) {
        jj_consume_token(LP);
        logical_expression();
        jj_consume_token(RP);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void logical_symbol() throws ParseException {
                       /*@bgen(jjtree) logical_symbol */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_SYMBOL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_19(4)) {
        jj_consume_token(LESSTHAN);
      } else if (jj_2_20(4)) {
        jj_consume_token(GREATERTHAN);
      } else if (jj_2_21(4)) {
        jj_consume_token(ASSIGN);
      } else if (jj_2_22(4)) {
        jj_consume_token(LESSEQUAL);
      } else if (jj_2_23(4)) {
        jj_consume_token(GREATEREQUAL);
      } else if (jj_2_24(4)) {
        jj_consume_token(EQUAL);
      } else if (jj_2_25(4)) {
        jj_consume_token(DIFFERENT);
      } else if (jj_2_26(4)) {
        jj_consume_token(LOGICOR);
      } else if (jj_2_27(4)) {
        jj_consume_token(LOGICAND);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void mantConstant() throws ParseException {
                     /*@bgen(jjtree) mantConstant */
  SimpleNode jjtn000 = new SimpleNode(JJTMANTCONSTANT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      constant();
      constant_closure();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void constant_closure() throws ParseException {
                         /*@bgen(jjtree) constant_closure */
  SimpleNode jjtn000 = new SimpleNode(JJTCONSTANT_CLOSURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_28(4)) {
        jj_consume_token(COMMA);
        constant();
        constant_closure();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void stmt_closure() throws ParseException {
                     /*@bgen(jjtree) stmt_closure */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT_CLOSURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_29(4)) {
        jj_consume_token(COMMA);
        stmt();
        stmt_closure();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void co_function() throws ParseException {
                    /*@bgen(jjtree) co_function */
  SimpleNode jjtn000 = new SimpleNode(JJTCO_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LEFTBRACE);
      fuctionBlock();
      jj_consume_token(RIGHTBRACE);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void fuctionBlock() throws ParseException {
                     /*@bgen(jjtree) fuctionBlock */
  SimpleNode jjtn000 = new SimpleNode(JJTFUCTIONBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      stmt_expression_closure();
      fuctionBlock_closure();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void stmt_expression_closure() throws ParseException {
                                /*@bgen(jjtree) stmt_expression_closure */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT_EXPRESSION_CLOSURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_30(4)) {
        stmt_expression();
        stmt_expression_closure();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void stmt_expression() throws ParseException {
                        /*@bgen(jjtree) stmt_expression */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT_EXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_31(4)) {
        stmt();
      } else {
        para_stmt();
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void fuctionBlock_closure() throws ParseException {
                             /*@bgen(jjtree) fuctionBlock_closure */
  SimpleNode jjtn000 = new SimpleNode(JJTFUCTIONBLOCK_CLOSURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_41(4)) {
        if (jj_2_32(4)) {
          assignment();
        } else if (jj_2_33(4)) {
          forloop();
        } else if (jj_2_34(4)) {
          whileloop();
        } else if (jj_2_35(4)) {
          if_statement();
        } else if (jj_2_36(4)) {
          return_statement();
        } else if (jj_2_37(4)) {
          prin_function();
        } else if (jj_2_38(4)) {
          scan_function();
        } else if (jj_2_39(4)) {
          jj_consume_token(CONTINUE);
        } else if (jj_2_40(4)) {
          jj_consume_token(BREAK);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        fuctionBlock();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void if_statement() throws ParseException {
                     /*@bgen(jjtree) if_statement */
  SimpleNode jjtn000 = new SimpleNode(JJTIF_STATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      ifblock();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ifblock() throws ParseException {
                /*@bgen(jjtree) ifblock */
  SimpleNode jjtn000 = new SimpleNode(JJTIFBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LP);
      logical_expression();
      jj_consume_token(RP);
      if (jj_2_42(4)) {
        co_function();
      } else if (jj_2_43(4)) {
        astament();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_44(4)) {
        else_statement();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void else_statement() throws ParseException {
                       /*@bgen(jjtree) else_statement */
  SimpleNode jjtn000 = new SimpleNode(JJTELSE_STATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELSE);
      if (jj_2_45(4)) {
        co_function();
      } else if (jj_2_46(4)) {
        astament();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void return_statement() throws ParseException {
                         /*@bgen(jjtree) return_statement */
  SimpleNode jjtn000 = new SimpleNode(JJTRETURN_STATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      factor();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void prin_function() throws ParseException {
                      /*@bgen(jjtree) prin_function */
  SimpleNode jjtn000 = new SimpleNode(JJTPRIN_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(49);
      jj_consume_token(LP);
      para_list();
      jj_consume_token(RP);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void scan_function() throws ParseException {
                      /*@bgen(jjtree) scan_function */
  SimpleNode jjtn000 = new SimpleNode(JJTSCAN_FUNCTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(50);
      jj_consume_token(LP);
      para_list();
      jj_consume_token(RP);
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void para_list() throws ParseException {
                  /*@bgen(jjtree) para_list */
  SimpleNode jjtn000 = new SimpleNode(JJTPARA_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      para();
      para_closure();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void para_closure() throws ParseException {
                     /*@bgen(jjtree) para_closure */
  SimpleNode jjtn000 = new SimpleNode(JJTPARA_CLOSURE);
  boolean jjtc000 = true;
